--- a/Bakery/Resources/Templates/MainWindowViewTemplates.xaml
+++ b/Bakery/Resources/Templates/MainWindowViewTemplates.xaml
@@ -39,6 +39,12 @@
         <views:ProductionPlansView/>
     </DataTemplate>
 
+    <!-- Список пользователей -->
+    <DataTemplate
+        DataType="{x:Type viewmodels:UsersVM}">
+        <views:UsersView/>
+    </DataTemplate>
+
     <!-- Профиль пользователя - сотрудника -->
     <DataTemplate
         DataType="{x:Type viewmodels:UserAddEditVM}">
