--- a/Bakery/Views/Windows/MainWindow.xaml
+++ b/Bakery/Views/Windows/MainWindow.xaml
@@ -70,12 +70,13 @@
                     <Button
                         Command="{Binding OpenUserProfileCommand}"
                         Margin="0,0,10,0"
-                        Content="Выйти"
+                        Content="Профиль"
                         VerticalAlignment="Center"/>
                     <Button
                         Command="{Binding UserLogOutCommand}"
                         Content="Выйти"
-                        VerticalAlignment="Center"/>
+                        VerticalAlignment="Center"
+                        Margin="0,0,10,0"/>
                 </StackPanel>
             </DockPanel>
         </Border>
