--- a/Bakery/Views/Workspaces/ProdSpecAddEditView.xaml
+++ b/Bakery/Views/Workspaces/ProdSpecAddEditView.xaml
@@ -56,12 +56,9 @@
                         Padding="5"
                         Margin="0,0,5,0"
                         Grid.Column="0">
-                        <TextBox>
-                            <Binding
-                                Path="Price"
-                                UpdateSourceTrigger="PropertyChanged">
-                            </Binding>
-                        </TextBox>
+                        <TextBox
+                            Text="{Binding Price,
+                                           UpdateSourceTrigger=PropertyChanged}"/>
                     </GroupBox>
 
                     <GroupBox
@@ -75,7 +72,6 @@
                             </Grid.ColumnDefinitions>
                             <TextBox
                                 Text="{Binding Weight,
-                                               StringFormat=d,
                                                UpdateSourceTrigger=PropertyChanged}"
                                 Grid.Column="0"/>
                             <StackPanel
@@ -166,8 +162,7 @@
                             MaxWidth="450"
                             Margin="0,0,0,10"/>
                         <Button
-                            Command="{Binding ChoosePhotoCommand}"
-                            Margin="0,0,0,10">
+                            Command="{Binding ChoosePhotoCommand}">
                             <Button.Style>
                                 <Style
                                     TargetType="Button"
@@ -189,15 +184,22 @@
                         </Button>
                         <Button
                             Command="{Binding RemovePhotoCommand}"
-                            Content="Удалить фотографию">
+                            Content="Удалить фотографию"
+                            Margin="0,10,0,0">
                             <Button.Style>
                                 <Style
                                     TargetType="Button"
                                     BasedOn="{StaticResource ButtonStyle}">
-                                    <Setter Property="Visibility" Value="Visible"/>
+                                    <Setter
+                                        Property="Visibility"
+                                        Value="Visible"/>
                                     <Style.Triggers>
-                                        <DataTrigger Binding="{Binding Photo}" Value="{x:Null}">
-                                            <Setter Property="Visibility" Value="Collapsed"/>
+                                        <DataTrigger
+                                            Binding="{Binding Photo}"
+                                            Value="{x:Null}">
+                                            <Setter
+                                                Property="Visibility"
+                                                Value="Collapsed"/>
                                         </DataTrigger>
                                     </Style.Triggers>
                                 </Style>
