--- a/Bakery/Views/Workspaces/UserAddEditView.xaml
+++ b/Bakery/Views/Workspaces/UserAddEditView.xaml
@@ -178,7 +178,8 @@
 
                 <GroupBox
                     Header="Должность"
-                    Margin="0,0,0,5" Padding="5">
+                    Margin="0,0,0,5" Padding="5"
+                    IsEnabled="{Binding IsAdmin}">
                     <StackPanel
                         Orientation="Horizontal">
                         <RadioButton
@@ -218,6 +219,16 @@
                             VerticalContentAlignment="Center"
                             Margin="0,5,5,0"/>
                     </StackPanel>
+                    <GroupBox.Style>
+                        <Style TargetType="GroupBox">
+                            <Setter Property="Visibility" Value="Visible"/>
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding IsAdmin}" Value="False">
+                                    <Setter Property="Visibility" Value="Collapsed"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </GroupBox.Style>
                 </GroupBox>
 
                 <GroupBox
@@ -225,7 +236,18 @@
                     Padding="5">
                     <TextBox
                         Text="{Binding Salary,
-                                       UpdateSourceTrigger=PropertyChanged}"/>
+                                       UpdateSourceTrigger=PropertyChanged}">
+                        <TextBox.Style>
+                            <Style TargetType="TextBox">
+                                <Setter Property="IsReadOnly" Value="True"/>
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding IsAdmin}" Value="True">
+                                        <Setter Property="IsReadOnly" Value="False"/>
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </TextBox.Style>
+                    </TextBox>
                 </GroupBox>
             </StackPanel>
 
